--- a/frappe/data_migration/doctype/data_migration_mapping_detail/data_migration_mapping_detail.json
+++ b/frappe/data_migration/doctype/data_migration_mapping_detail/data_migration_mapping_detail.json
@@ -132,36 +132,6 @@
    "search_index": 0, 
    "set_only_once": 0, 
    "unique": 0
-  }, 
-  {
-   "allow_bulk_edit": 0, 
-   "allow_on_submit": 0, 
-   "bold": 0, 
-   "collapsible": 0, 
-   "columns": 0, 
-   "fieldname": "formula", 
-   "fieldtype": "Code", 
-   "hidden": 0, 
-   "ignore_user_permissions": 0, 
-   "ignore_xss_filter": 0, 
-   "in_filter": 0, 
-   "in_global_search": 0, 
-   "in_list_view": 0, 
-   "in_standard_filter": 0, 
-   "label": "Formula", 
-   "length": 0, 
-   "no_copy": 0, 
-   "permlevel": 0, 
-   "precision": "", 
-   "print_hide": 0, 
-   "print_hide_if_no_value": 0, 
-   "read_only": 0, 
-   "remember_last_selected_value": 0, 
-   "report_hide": 0, 
-   "reqd": 0, 
-   "search_index": 0, 
-   "set_only_once": 0, 
-   "unique": 0
   }
  ], 
  "has_web_view": 0, 
@@ -174,8 +144,8 @@
  "issingle": 0, 
  "istable": 1, 
  "max_attachments": 0, 
- "modified": "2017-09-21 16:18:30.674207", 
- "modified_by": "manas@erpnext.com", 
+ "modified": "2017-09-27 18:34:56.845930", 
+ "modified_by": "Administrator", 
  "module": "Data Migration", 
  "name": "Data Migration Mapping Detail", 
  "name_case": "", 
