--- a/frappe/data_migration/doctype/data_migration_mapping_detail/data_migration_mapping_detail.json
+++ b/frappe/data_migration/doctype/data_migration_mapping_detail/data_migration_mapping_detail.json
@@ -109,8 +109,8 @@
    "collapsible": 0, 
    "columns": 0, 
    "depends_on": "is_child_table", 
-   "fieldname": "child_table_mappings", 
-   "fieldtype": "Code", 
+   "fieldname": "child_table_mapping", 
+   "fieldtype": "Link", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
@@ -118,9 +118,10 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Child Table Mappings", 
+   "label": "Child Table Mapping", 
    "length": 0, 
    "no_copy": 0, 
+   "options": "Data Migration Mapping", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -144,7 +145,7 @@
  "issingle": 0, 
  "istable": 1, 
  "max_attachments": 0, 
- "modified": "2017-09-27 18:34:56.845930", 
+ "modified": "2017-09-28 17:13:31.337005", 
  "modified_by": "Administrator", 
  "module": "Data Migration", 
  "name": "Data Migration Mapping Detail", 
