--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ httplib2
 jinja2
 markdown2
 markupsafe
-mysqlclient==1.3.10
+-e git+https://github.com/frappe/mysqlclient-python.git@1.3.12#egg=mysqlclient
 python-geoip
 python-geoip-geolite2
 python-dateutil
@@ -37,7 +37,7 @@ cryptography
 pyopenssl
 ndg-httpsclient
 pyasn1
-zxcvbn
+zxcvbn-python
 psutil
 unittest-xml-reporting
 oauthlib
