--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
   },
   "homepage": "https://frappe.io",
   "dependencies": {
-    "babel-core": "^6.24.1",
-    "babel-preset-babili": "0.0.12",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "chokidar": "^1.7.0",
-    "chromedriver": "^2.30.1",
     "cookie": "^0.3.1",
     "express": "^4.15.3",
-    "less": "^2.7.2",
-    "nightwatch": "^0.9.16",
     "redis": "^2.7.1",
     "socket.io": "^2.0.1",
     "superagent": "^3.5.2",
-	"touch": "^3.1.0"
+    "touch": "^3.1.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-minify": "^0.2.0",
+    "chokidar": "^1.7.0",
+    "chromedriver": "^2.32.3",
+    "less": "^2.7.2",
+    "nightwatch": "^0.9.16"
   }
 }
