--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ jinja2
 markdown2
 markupsafe
 -e git+https://github.com/frappe/mysqlclient-python.git@1.3.12#egg=mysqlclient
+PyMySQL
 python-geoip
 python-geoip-geolite2
 python-dateutil
