--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ httplib2
 jinja2
 markdown2
 markupsafe
--e git+https://github.com/frappe/mysqlclient-python.git@1.3.12#egg=mysqlclient
+mysqlclient>=1.3.12
 python-geoip
 python-geoip-geolite2
 python-dateutil
