--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ httplib2
 jinja2
 markdown2
 markupsafe
--e git+https://github.com/frappe/mysqlclient-python.git@1.3.12#egg=mysqlclient
 PyMySQL
 python-geoip
 python-geoip-geolite2
@@ -51,4 +50,4 @@ pyqrcode
 pypng
 premailer
 psycopg2
-
+croniter
