--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
 dist: trusty
 
-services:
-  - mysql
-
- python:
+python:
   - "2.7"
   - "3.6"
+
+services:
+  - mysql
 
 addons:
   postgresql: "9.5"
@@ -41,8 +41,8 @@ before_script:
 
 jobs:
   include:
-   - stage: Server Side Tests
-      name: 'MariaDB tests'
+    - stage: Server Side Tests
+      name: "MariaDB tests"
       script:
         - mysql -u root -ptravis -e 'create database test_frappe'
         - echo "USE mysql;\nCREATE USER 'test_frappe'@'localhost' IDENTIFIED BY 'test_frappe';\nFLUSH PRIVILEGES;\n" | mysql -u root -ptravis
@@ -56,7 +56,7 @@ jobs:
         - coveralls -b apps/frappe -d ../../sites/.coverage
       env: MariaDB
     - # stage
-      name: 'Postgres tests'
+      name: "Postgres tests"
       python: "3.6"
       script:
         - psql -c "CREATE DATABASE test_frappe;" -U postgres
