--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,31 @@
 language: python
 dist: trusty
 
+python:
+  - 2.7
+  - 3.6
+
+env:
+  - DB=mariadb
+  - DB=postgres
+
+services:
+  - mysql
+
+addons:
+  postgresql: "9.4"
+  hosts:
+    - test_site
+    - test_site_postrgres
+
+matrix:
+  allow_failures:
+  - python: 2.7
+    env: DB=postgres
+  fast_finish: true
+
 install:
-  - sudo rm /etc/apt/sources.list.d/mongodb*.list
-  - sudo rm /etc/apt/sources.list.d/docker.list
-  - sudo apt-get install hhvm && rm -rf /home/travis/.kiex/
-  - sudo apt-get purge -y mysql-common mysql-server mysql-client
-  - nvm install v8.10.0
-
-  - pip install python-coveralls
-
-  - wget https://raw.githubusercontent.com/frappe/bench/master/playbooks/install.py
-
-  - sudo python install.py --develop --user travis --without-bench-setup
-  - sudo pip install -e ~/bench
-
-  - rm $TRAVIS_BUILD_DIR/.git/shallow
-  - cd ~/ && bench init frappe-bench --python $(which python) --frappe-path $TRAVIS_BUILD_DIR
-  - cp -r $TRAVIS_BUILD_DIR/test_sites/test_site ~/frappe-bench/sites/
-  - cp -r $TRAVIS_BUILD_DIR/test_sites/test_site_postgres ~/frappe-bench/sites/
+  - "./.travis/install.sh"
 
 before_script:
   - cd ~/frappe-bench
@@ -26,42 +33,8 @@ before_script:
   - bench start &
   - sleep 10
 
+script:
+  - "./.travis/run-tests.sh"
+
 after_script:
   - coveralls -b apps/frappe -d ../../sites/.coverage
-
-jobs:
-  include:
-    - stage: Server Side Tests
-      name: "MariaDB tests"
-      services:
-        - mysql
-      addons:
-        hosts:
-          - test_site
-      python:
-        - "2.7"
-        - "3.6"
-      script:
-        - mysql -u root -ptravis -e 'create database test_frappe'
-        - echo "USE mysql;\nCREATE USER 'test_frappe'@'localhost' IDENTIFIED BY 'test_frappe';\nFLUSH PRIVILEGES;\n" | mysql -u root -ptravis
-        - echo "USE mysql;\nGRANT ALL PRIVILEGES ON \`test_frappe\`.* TO 'test_frappe'@'localhost';\n" | mysql -u root -ptravis
-        - bench --site test_site reinstall --yes
-        - bench --site test_site setup-help
-        - bench setup-global-help --root_password travis
-        - bench --site test_site scheduler disable
-        - bench --site test_site run-tests --coverage
-    - # stage
-      name: "Postgres tests"
-      python: "3.6"
-      addons:
-        postgresql: "9.5"
-        hosts:
-          - test_site_postgres
-      script:
-        - psql -c "CREATE DATABASE test_frappe;" -U postgres
-        - psql -c "CREATE USER test_frappe WITH PASSWORD 'test_frappe';" -U postgres
-        - bench --site test_site_postgres reinstall --yes
-        - bench --site test_site_postgres setup-help
-        - bench setup-global-help --db_type=postgres --root_password travis
-        - bench --site test_site_postgres scheduler disable
-        - bench --site test_site_postgres run-tests --coverage
