--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment-timezone": "^0.5.21",
     "quill": "^1.3.6",
     "quill-image-drop-module": "^1.0.3",
+    "quill-mention": "^2.0.2",
     "redis": "^2.8.0",
     "showdown": "^1.8.6",
     "socket.io": "^2.0.4",
