--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "jsbarcode": "^3.9.0",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.21",
+    "quill": "^1.3.6",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-mention": "^2.0.2",
     "redis": "^2.8.0",
     "showdown": "^1.8.6",
     "socket.io": "^2.0.4",
