--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "jsbarcode": "^3.9.0",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.21",
-    "quill": "^1.3.6",
+    "quill": "2.0.0-dev.2",
     "quill-image-drop-module": "^1.0.3",
     "quill-mention": "^2.0.2",
     "redis": "^2.8.0",
