--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "rollup-plugin-node-resolve": "^3.0.2",
     "rollup-plugin-postcss": "^1.4.0",
     "rollup-plugin-uglify": "^3.0.0",
-    "rollup-plugin-vue": "^4.3.2",
+    "rollup-plugin-vue": "4.2.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
