--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "ace-builds": "^1.4.1",
     "awesomplete": "^1.1.2",
+    "bootstrap": "3",
     "cookie": "^0.3.1",
     "express": "^4.16.2",
     "frappe-datatable": "^1.5.3",
