--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "babel-runtime": "^6.26.0",
     "chalk": "^2.3.2",
+    "cypress": "^3.1.1",
     "less": "^3.0.4",
     "node-sass": "^4.9.0",
     "rollup": "^0.65.0",
