--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
 env:
   - DB=mariadb
   - DB=postgres
+  - TEST_TYPE=ui
 
 services:
   - mysql
@@ -18,11 +19,14 @@ addons:
   hosts:
     - test_site
     - test_site_postgres
+    - test_site_ui
 
 matrix:
   exclude:
   - python: 2.7
     env: DB=postgres
+  - python: 3.6
+    env: TEST_TYPE=ui
 
 install:
   - $TRAVIS_BUILD_DIR/.travis/install.sh
