--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -304,6 +304,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "default": "HH:mm:ss",
    "fieldname": "time_format",
    "fieldtype": "Select",
    "hidden": 0,
@@ -1658,7 +1659,7 @@
  "issingle": 1,
  "istable": 0,
  "max_attachments": 0,
- "modified": "2018-12-19 12:43:48.589581",
+ "modified": "2018-12-21 08:13:53.809727",
  "modified_by": "Administrator",
  "module": "Core",
  "name": "System Settings",
