--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "frappe-datatable": "^1.6.1",
     "frappe-gantt": "^0.1.0",
     "fuse.js": "^3.2.0",
+    "fullcalendar": "^3.4.0",
     "highlight.js": "^9.12.0",
     "jsbarcode": "^3.9.0",
     "moment": "^2.20.1",
