--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "socket.io": "^2.0.4",
     "superagent": "^3.8.2",
     "touch": "^3.1.0",
-    "vue": "2.5.17",
+    "vue": "^2.6.8",
     "vue-router": "^2.0.0"
   },
   "devDependencies": {
@@ -53,6 +53,6 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-vue": "4.2.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.6.8"
   }
 }
