--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -1,5 +1,6 @@
 {
  "allow_copy": 0,
+ "allow_events_in_timeline": 0,
  "allow_guest_to_view": 0,
  "allow_import": 0,
  "allow_rename": 0,
@@ -18,6 +19,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "localization",
    "fieldtype": "Section Break",
    "hidden": 0,
@@ -49,6 +51,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "country",
    "fieldtype": "Link",
    "hidden": 0,
@@ -82,6 +85,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "language",
    "fieldtype": "Link",
    "hidden": 0,
@@ -114,6 +118,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "column_break_3",
    "fieldtype": "Column Break",
    "hidden": 0,
@@ -145,6 +150,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "time_zone",
    "fieldtype": "Select",
    "hidden": 0,
@@ -176,6 +182,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "is_first_startup",
    "fieldtype": "Check",
    "hidden": 1,
@@ -208,6 +215,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "setup_complete",
    "fieldtype": "Check",
    "hidden": 1,
@@ -240,6 +248,7 @@
    "bold": 0,
    "collapsible": 1,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "date_and_number_format",
    "fieldtype": "Section Break",
    "hidden": 0,
@@ -271,6 +280,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "date_format",
    "fieldtype": "Select",
    "hidden": 0,
@@ -303,6 +313,42 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "default": "HH:mm:ss",
+   "fetch_if_empty": 0,
+   "fieldname": "time_format",
+   "fieldtype": "Select",
+   "hidden": 0,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_standard_filter": 0,
+   "label": "Time Format",
+   "length": 0,
+   "no_copy": 0,
+   "options": "HH:mm:ss\nHH:mm",
+   "permlevel": 0,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "read_only": 0,
+   "remember_last_selected_value": 0,
+   "report_hide": 0,
+   "reqd": 1,
+   "search_index": 0,
+   "set_only_once": 0,
+   "translatable": 0,
+   "unique": 0
+  },
+  {
+   "allow_bulk_edit": 0,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
+   "collapsible": 0,
+   "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "column_break_7",
    "fieldtype": "Column Break",
    "hidden": 0,
@@ -334,6 +380,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "number_format",
    "fieldtype": "Select",
    "hidden": 0,
@@ -366,6 +413,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "float_precision",
    "fieldtype": "Select",
    "hidden": 0,
@@ -399,6 +447,7 @@
    "collapsible": 0,
    "columns": 0,
    "description": "If not set, the currency precision will depend on number format",
+   "fetch_if_empty": 0,
    "fieldname": "currency_precision",
    "fieldtype": "Select",
    "hidden": 0,
@@ -432,6 +481,7 @@
    "bold": 0,
    "collapsible": 1,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "sec_backup_limit",
    "fieldtype": "Section Break",
    "hidden": 0,
@@ -466,6 +516,7 @@
    "columns": 0,
    "default": "3",
    "description": "Older backups will be automatically deleted",
+   "fetch_if_empty": 0,
    "fieldname": "backup_limit",
    "fieldtype": "Int",
    "hidden": 0,
@@ -498,6 +549,7 @@
    "bold": 0,
    "collapsible": 1,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "background_workers",
    "fieldtype": "Section Break",
    "hidden": 0,
@@ -531,6 +583,7 @@
    "collapsible": 0,
    "columns": 0,
    "description": "Run scheduled jobs only if checked",
+   "fetch_if_empty": 0,
    "fieldname": "enable_scheduler",
    "fieldtype": "Check",
    "hidden": 1,
@@ -562,6 +615,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "scheduler_last_event",
    "fieldtype": "Data",
    "hidden": 1,
@@ -594,6 +648,7 @@
    "bold": 0,
    "collapsible": 1,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "permissions",
    "fieldtype": "Section Break",
    "hidden": 0,
@@ -628,6 +683,7 @@
    "columns": 0,
    "default": "0",
    "description": "If Apply Strict User Permission is checked and User Permission is defined for a DocType for a User, then all the documents where value of the link is blank, will not be shown to that User",
+   "fetch_if_empty": 0,
    "fieldname": "apply_strict_user_permissions",
    "fieldtype": "Check",
    "hidden": 0,
@@ -660,6 +716,7 @@
    "bold": 0,
    "collapsible": 1,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "security",
    "fieldtype": "Section Break",
    "hidden": 0,
@@ -693,6 +750,7 @@
    "columns": 0,
    "default": "06:00",
    "description": "Session Expiry in Hours e.g. 06:00",
+   "fetch_if_empty": 0,
    "fieldname": "session_expiry",
    "fieldtype": "Data",
    "hidden": 0,
@@ -727,6 +785,7 @@
    "columns": 0,
    "default": "720:00",
    "description": "In Hours",
+   "fetch_if_empty": 0,
    "fieldname": "session_expiry_mobile",
    "fieldtype": "Data",
    "hidden": 0,
@@ -761,6 +820,7 @@
    "columns": 0,
    "default": "1",
    "description": "If enabled, the password strength will be enforced based on the Minimum Password Score value. A value of 2 being medium strong and 4 being very strong.",
+   "fetch_if_empty": 0,
    "fieldname": "enable_password_policy",
    "fieldtype": "Check",
    "hidden": 0,
@@ -795,6 +855,7 @@
    "columns": 0,
    "default": "2",
    "depends_on": "eval:doc.enable_password_policy==1",
+   "fetch_if_empty": 0,
    "fieldname": "minimum_password_score",
    "fieldtype": "Select",
    "hidden": 0,
@@ -828,6 +889,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "column_break_13",
    "fieldtype": "Column Break",
    "hidden": 0,
@@ -860,6 +922,7 @@
    "collapsible": 0,
    "columns": 0,
    "description": "Note: Multiple sessions will be allowed in case of mobile device",
+   "fetch_if_empty": 0,
    "fieldname": "deny_multiple_sessions",
    "fieldtype": "Check",
    "hidden": 0,
@@ -894,6 +957,7 @@
    "columns": 0,
    "default": "0",
    "description": "User can login using Email id or Mobile number",
+   "fetch_if_empty": 0,
    "fieldname": "allow_login_using_mobile_number",
    "fieldtype": "Check",
    "hidden": 0,
@@ -928,6 +992,7 @@
    "columns": 0,
    "default": "0",
    "description": "User can login using Email id or User Name",
+   "fetch_if_empty": 0,
    "fieldname": "allow_login_using_user_name",
    "fieldtype": "Check",
    "hidden": 0,
@@ -962,6 +1027,7 @@
    "columns": 0,
    "default": "1",
    "description": "",
+   "fetch_if_empty": 0,
    "fieldname": "allow_error_traceback",
    "fieldtype": "Check",
    "hidden": 0,
@@ -994,6 +1060,7 @@
    "bold": 0,
    "collapsible": 1,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "brute_force_security",
    "fieldtype": "Section Break",
    "hidden": 0,
@@ -1026,6 +1093,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "allow_consecutive_login_attempts",
    "fieldtype": "Int",
    "hidden": 0,
@@ -1058,6 +1126,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "column_break_34",
    "fieldtype": "Column Break",
    "hidden": 0,
@@ -1091,6 +1160,7 @@
    "columns": 0,
    "default": "60",
    "description": "In seconds",
+   "fetch_if_empty": 0,
    "fieldname": "allow_login_after_fail",
    "fieldtype": "Int",
    "hidden": 0,
@@ -1123,6 +1193,7 @@
    "bold": 0,
    "collapsible": 1,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "two_factor_authentication",
    "fieldtype": "Section Break",
    "hidden": 0,
@@ -1155,6 +1226,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "enable_two_factor_auth",
    "fieldtype": "Check",
    "hidden": 0,
@@ -1190,6 +1262,7 @@
    "default": "0",
    "depends_on": "enable_two_factor_auth",
    "description": "If enabled, users who login from Restricted IP Address, won't be prompted for Two Factor Auth",
+   "fetch_if_empty": 0,
    "fieldname": "bypass_2fa_for_retricted_ip_users",
    "fieldtype": "Check",
    "hidden": 0,
@@ -1224,6 +1297,7 @@
    "columns": 0,
    "depends_on": "enable_two_factor_auth",
    "description": "If enabled, all users can login from any IP Address using Two Factor Auth. This can also be set only for specific user(s) in User Page",
+   "fetch_if_empty": 0,
    "fieldname": "bypass_restrict_ip_check_if_2fa_enabled",
    "fieldtype": "Check",
    "hidden": 0,
@@ -1259,6 +1333,7 @@
    "default": "OTP App",
    "depends_on": "",
    "description": "Choose authentication method to be used by all users",
+   "fetch_if_empty": 0,
    "fieldname": "two_factor_method",
    "fieldtype": "Select",
    "hidden": 0,
@@ -1294,6 +1369,7 @@
    "columns": 0,
    "depends_on": "eval:doc.two_factor_method == \"OTP App\"",
    "description": "Time in seconds to retain QR code image on server. Min:<strong>240</strong>",
+   "fetch_if_empty": 0,
    "fieldname": "lifespan_qrcode_image",
    "fieldtype": "Int",
    "hidden": 0,
@@ -1328,6 +1404,7 @@
    "columns": 0,
    "default": "Frappe Framework",
    "depends_on": "enable_two_factor_auth",
+   "fetch_if_empty": 0,
    "fieldname": "otp_issuer_name",
    "fieldtype": "Data",
    "hidden": 0,
@@ -1361,6 +1438,7 @@
    "bold": 0,
    "collapsible": 1,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "email",
    "fieldtype": "Section Break",
    "hidden": 0,
@@ -1394,6 +1472,7 @@
    "collapsible": 0,
    "columns": 0,
    "description": "Your organization name and address for the email footer.",
+   "fetch_if_empty": 0,
    "fieldname": "email_footer_address",
    "fieldtype": "Small Text",
    "hidden": 0,
@@ -1426,6 +1505,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "column_break_18",
    "fieldtype": "Column Break",
    "hidden": 0,
@@ -1457,6 +1537,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "disable_standard_email_footer",
    "fieldtype": "Check",
    "hidden": 0,
@@ -1489,6 +1570,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "hide_footer_in_auto_email_reports",
    "fieldtype": "Check",
    "hidden": 0,
@@ -1521,6 +1603,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "chat",
    "fieldtype": "Section Break",
    "hidden": 0,
@@ -1554,6 +1637,7 @@
    "collapsible": 0,
    "columns": 0,
    "default": "1",
+   "fetch_if_empty": 0,
    "fieldname": "enable_chat",
    "fieldtype": "Check",
    "hidden": 0,
@@ -1587,6 +1671,7 @@
    "collapsible": 0,
    "columns": 0,
    "default": "1",
+   "fetch_if_empty": 0,
    "fieldname": "use_socketio_to_upload_file",
    "fieldtype": "Check",
    "hidden": 0,
@@ -1624,7 +1709,7 @@
  "issingle": 1,
  "istable": 0,
  "max_attachments": 0,
- "modified": "2019-01-30 11:02:41.011412",
+ "modified": "2019-03-15 05:42:40.716025",
  "modified_by": "Administrator",
  "module": "Core",
  "name": "System Settings",
